src/snapshots/purring__parser__tests__typ_empty_row.snap
---
source: src/parser.rs
expression: "p_typ(\"()\")"
---
10 of 10
===
Module
 Header
  QProperName
   NULL
   ProperName
    7..10
  Decl::Sig
   Name
    18..19
   Typ::Row
    0..24
     Row
      NULL
===
