src/snapshots/purring__parser__tests__typ_higher_kinded.snap
---
source: src/parser.rs
expression: "p_typ(\"Foo bar biz\")"
---
3 of 3
===
Typ::App
 Typ::App
  Typ::Constructor
   QProperName
    NULL
    ProperName
     0..3
  Typ::Var
   Name
    4..7
 Typ::Var
  Name
   8..11
===
