src/snapshots/purring__parser__tests__typ_operators.snap
---
source: src/parser.rs
expression: "p_typ(\"Array $ Maybe $ Maybe $ Int\")"
---
14 of 14
===
Module
 Header
  QProperName
   NULL
   ProperName
    7..10
  Decl::Sig
   Name
    18..19
   Typ::Op
    Typ::Op
     Typ::Op
      Typ::Constructor
       QProperName
        NULL
        ProperName
         23..28
      QOp
       NULL
       Op
        29..30
      Typ::Constructor
       QProperName
        NULL
        ProperName
         31..36
     QOp
      NULL
      Op
       37..38
     Typ::Constructor
      QProperName
       NULL
       ProperName
        39..44
    QOp
     NULL
     Op
      45..46
    Typ::Constructor
     QProperName
      NULL
      ProperName
       47..50
===
