src/snapshots/purring__parser__tests__typ_row.snap
---
source: src/parser.rs
expression: "p_typ(\" ( a :: {} , a :: {}) \")"
---
18 of 18
===
Module
 Header
  QProperName
   NULL
   ProperName
    7..10
  Decl::Sig
   Name
    18..19
   Typ::Row
    24..44
     Row
       (
        Label
         26..27
        Typ::Record
         31..35
          Row
           NULL
       )
       (
        Label
         36..37
        Typ::Record
         41..44
          Row
           NULL
       )
      NULL
===
