src/snapshots/purring__parser__tests__typ_row_kind_ambiguity_row.snap
---
source: src/parser.rs
expression: "p_typ(\"( a :: A )\")"
---
5 of 5
===
Typ::Kinded
 Typ::Var
  Name
   2..3
 Typ::Constructor
  QProperName
   7..8
   ProperName
    7..8
===
