src/snapshots/purring__parser__tests__typ_row_kind_ambiguity_typ.snap
---
source: src/parser.rs
expression: "p_typ(\"A :: Type\")"
---
10 of 10
===
Module
 Header
  QProperName
   NULL
   ProperName
    7..10
  Decl::Sig
   Name
    18..19
   Typ::Kinded
    Typ::Constructor
     QProperName
      NULL
      ProperName
       23..24
    Typ::Constructor
     QProperName
      NULL
      ProperName
       28..32
===
