src/snapshots/purring__parser__tests__typ_var_bindings_a.snap
---
source: src/parser.rs
expression: "p_typ(\"a\")"
---
9 of 9
===
Module
 Header
  QProperName
   NULL
   ProperName
    7..10
  Decl::Sig
   Name
    18..19
   Typ::Var
    Name
     23..24
===
