src/snapshots/purring__parser__tests__typ_var_bindings_a_at.snap
---
source: src/parser.rs
expression: "p_typ_var_binding(\"@a\")"
---
2 of 2
===
TypVarBinding
 Name
  1..2
 NULL
===
