src/snapshots/purring__parser__tests__typ_var_bindings_a_at_paren.snap
---
source: src/parser.rs
expression: "p_typ_var_binding(\"( @a )\")"
---
15 of 15
===
Module
 Header
  QProperName
   NULL
   ProperName
    7..13
  Decl::Sig
   Name
    21..22
   Typ::Forall
     TypVarBinding
      Name
       36..37
      NULL
    Typ::Constructor
     QProperName
      NULL
      ProperName
       41..45
===
