src/snapshots/purring__parser__tests__typ_var_bindings_a_at_paren_kind.snap
---
source: src/parser.rs
expression: "p_typ_var_binding(\"( @a :: Kind )\")"
---
16 of 16
===
Module
 Header
  QProperName
   NULL
   ProperName
    7..13
  Decl::Sig
   Name
    21..22
   Typ::Forall
     TypVarBinding
      Name
       36..37
      Typ::Constructor
       QProperName
        NULL
        ProperName
         41..45
    Typ::Constructor
     QProperName
      NULL
      ProperName
       49..53
===
